# mexico-en-datos

./: .env.example  .gitignore  .vercelignore  BRAND.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: claude-agent.yml  sync-annual-health.yml  sync-daily.yml  sync-monthly.yml  sync-quarterly-enoe.yml
app/: package-lock.json  package.json  tailwind.config.ts
app/public/: BingSiteAuth.xml  llms.txt
app/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/src/app/calendario/: page.tsx
app/src/app/comercio/: ComercioClient.tsx  opengraph-image.tsx  page.tsx
app/src/app/comparar/: CompararClient.tsx  page.tsx
app/src/app/economia/: opengraph-image.tsx  page.tsx
app/src/app/educacion/: page.tsx
app/src/app/empleo/: EmpleoClient.tsx  EmpleoTrends.tsx  opengraph-image.tsx  (+1 more)
app/src/lib/: cache.ts  canvas.ts  colors.ts  data.ts  db.ts  format.ts  indicatorDescriptions.ts  scorecard.ts  sources.ts  types.ts
app/src/styles/: tokens.css
db/: README.md
db/migrations/: 001_initial_schema.sql  002_seed_geographic_areas.sql  003_employment_tables.sql  004_security_tables.sql  005_health_tables.sql  006_ensanut_tables.sql
ingest/: Makefile  validate.py
ingest/config/: indicators.yaml
ingest/pipelines/: banxico.py  enoe.py  ensu.py  envipe.py  indicators.py  sesnsp.py
ingest/pipelines/health/: __init__.py  clues.py  conapo.py  covid.py  ensanut.py  imss_coverage.py  mortality.py
ingest/utils/: db.py  inegi_client.py  transforms.py
site/: index.html  med.css  med.js
(+69 files in other folders)
